@@ -136,6 +136,7 @@
 			<label index="outline_header_element">Element:</label>
 			<label index="outline_status_dirty">Click to clean up XML...</label>
 			<label index="outline_status_clean">XML is clean.</label>
+			<label index="outline_status_cleanAll">Clean XML of all dirty elements above!</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="title">Web &gt; Side module</label>
